--- a/index.html
+++ b/index.html
@@ -1,70 +1,58 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Teachable Machine x Thunkable</title>
+    <title>TM in Thunkable</title>
+    <meta charset="UTF-8" />
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
-    <style>
-      body {
-        font-family: sans-serif;
-        text-align: center;
-        padding: 20px;
-      }
-      #preview {
-        display: none;
-        max-width: 100%;
-        border: 2px solid #ccc;
-        margin-top: 10px;
-      }
-    </style>
   </head>
   <body>
-    <h2>Teachable Machine x Thunkable</h2>
-    <p id="status">รอรับภาพจาก Thunkable...</p>
-    <img id="preview" />
-    
+    <h2 id="status">รอรับภาพจาก Thunkable...</h2>
+    <img id="preview" width="200" />
     <script>
-      const URL = "https://teachablemachine.withgoogle.com/models/U7Zrx7V59/"; // เปลี่ยนเป็นลิงก์ของคุณเอง
-
+      const URL = "https://teachablemachine.withgoogle.com/models/U7Zrx7V59/";
       let model;
 
-      async function initModel() {
+      async function loadModel() {
         const modelURL = URL + "model.json";
         const metadataURL = URL + "metadata.json";
         model = await tmImage.load(modelURL, metadataURL);
-        document.getElementById("status").innerText = "โมเดลโหลดแล้ว! รอรับภาพ...";
-        console.log("Model loaded");
+        document.getElementById("status").innerText = "พร้อมรับภาพจาก Thunkable แล้ว...";
       }
 
-      function handleMessage(event) {
-        const base64Image = event.data;
-        console.log("ได้รับภาพ base64 แล้ว");
+      loadModel();
 
-        document.getElementById("status").innerText = "ประมวลผลภาพ...";
+      function handleMessage(event) {
+        const data = event.data;
+
+        if (!data.startsWith("data:image")) {
+          document.getElementById("status").innerText = "ข้อมูลที่รับไม่ใช่รูปภาพ";
+          return;
+        }
+
         const img = document.getElementById("preview");
-        img.src = base64Image;
-        img.style.display = "block";
+        img.src = data;
+        document.getElementById("status").innerText = "ประมวลผล...";
 
         img.onload = async () => {
-          const prediction = await model.predict(img);
-          const topResult = prediction.sort((a, b) => b.probability - a.probability)[0];
-          const result = topResult.className;
-          document.getElementById("status").innerText = 'ผลลัพธ์: ${result}';
-          console.log("ส่งกลับไปยัง Thunkable:", result);
-          
-          if (window.ReactNativeWebView && window.ReactNativeWebView.postMessage) {
-            window.ReactNativeWebView.postMessage(result);
-          } else {
-            window.parent.postMessage(result, "*");
+          try {
+            const prediction = await model.predict(img);
+            const top = prediction.sort((a, b) => b.probability - a.probability)[0];
+
+            document.getElementById("status").innerText = `ผลลัพธ์: ${top.className}`;
+
+            if (window.ReactNativeWebView && window.ReactNativeWebView.postMessage) {
+              window.ReactNativeWebView.postMessage(top.className);
+            } else {
+              window.parent.postMessage(top.className, "*");
+            }
+          } catch (err) {
+            document.getElementById("status").innerText = "เกิดข้อผิดพลาดในการประมวลผล";
           }
         };
       }
 
-      // รองรับทั้ง Web Viewer แบบ Web และ Mobile App
-      document.addEventListener("message", handleMessage); // สำหรับ Android/iOS
-      window.addEventListener("message", handleMessage);   // สำหรับ Web / Emulator
-
-      initModel();
+      document.addEventListener("message", handleMessage);
+      window.addEventListener("message", handleMessage);
     </script>
   </body>
 </html>
