--- a/index.html
+++ b/index.html
@@ -1,58 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>TM in Thunkable</title>
-    <meta charset="UTF-8" />
-    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
-  </head>
-  <body>
-    <h2 id="status">รอรับภาพจาก Thunkable...</h2>
-    <img id="preview" width="200" />
-    <script>
-      const URL = "https://teachablemachine.withgoogle.com/models/U7Zrx7V59/";
-      let model;
+<body>
+  <input type="file" id="fileInput" accept="image/*"><br>
+  <img id="preview" width="200">
+  <script>
+    window.addEventListener("message", async function(event) {
+      const blobUrl = event.data;
+      const response = await fetch(blobUrl);
+      const blob = await response.blob();
 
-      async function loadModel() {
-        const modelURL = URL + "model.json";
-        const metadataURL = URL + "metadata.json";
-        model = await tmImage.load(modelURL, metadataURL);
-        document.getElementById("status").innerText = "พร้อมรับภาพจาก Thunkable แล้ว...";
-      }
-
-      loadModel();
-
-      function handleMessage(event) {
-        const data = event.data;
-
-        if (!data.startsWith("data:image")) {
-          document.getElementById("status").innerText = "ข้อมูลที่รับไม่ใช่รูปภาพ";
-          return;
-        }
-
-        const img = document.getElementById("preview");
-        img.src = data;
-        document.getElementById("status").innerText = "ประมวลผล...";
-
-        img.onload = async () => {
-          try {
-            const prediction = await model.predict(img);
-            const top = prediction.sort((a, b) => b.probability - a.probability)[0];
-
-            document.getElementById("status").innerText = `ผลลัพธ์: ${top.className}`;
-
-            if (window.ReactNativeWebView && window.ReactNativeWebView.postMessage) {
-              window.ReactNativeWebView.postMessage(top.className);
-            } else {
-              window.parent.postMessage(top.className, "*");
-            }
-          } catch (err) {
-            document.getElementById("status").innerText = "เกิดข้อผิดพลาดในการประมวลผล";
-          }
-        };
-      }
-
-      document.addEventListener("message", handleMessage);
-      window.addEventListener("message", handleMessage);
-    </script>
-  </body>
+      const reader = new FileReader();
+      reader.onloadend = function() {
+        const base64 = reader.result;
+        // ส่ง base64 กลับไปให้ Thunkable หรืออัปโหลด
+        console.log("Base64 ready", base64);
+        window.ReactNativeWebView.postMessage(base64); // ถ้าต้องส่งกลับไป
+      };
+      reader.readAsDataURL(blob); // แปลง blob เป็น base64
+    });
+  </script>
+</body>
 </html>
