--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
       async function loadModel() {
         const modelURL = URL + "model.json";
         const metadataURL = URL + "metadata.json";
-        model = await tmImage.load(modelURL, metadataURL);
-        document.getElementById("status").innerText = "พร้อมรับภาพจาก Thunkable แล้ว...";
+        try {
+    model = await tmImage.load(modelURL, metadataURL);
+    document.getElementById("status").innerText = "พร้อมรับภาพจาก Thunkable แล้ว...";
+  } catch (err) {
+    document.getElementById("status").innerText = "❌ โหลดโมเดลไม่สำเร็จ";
+    console.error(err);
+  }
       }
 
       loadModel();
