--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h2 id="status">กำลังโหลดโมเดล...</h2>
   <img id="preview" width="200" />
   <script>
-    const URL = "https://olieveeve.github.io/TMmodel/"; // เปลี่ยนให้ตรงกับของคุณ
+    const URL = "https://olieveeve.github.io/TMmodel/"; // ← ถูกต้อง
     let model;
 
     async function loadModel() {
