--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
     // ประมวลผลเมื่อได้รับข้อความจาก Thunkable
     async function handleMessage(event) {
+            console.log("รับข้อมูลจาก Thunkable:", event.data);
       const imageUrl = event.data;
 
       if (!imageUrl || !imageUrl.startsWith("http")) {
