--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
     // แปลง URL ของภาพเป็น base64
     async function imageUrlToBase64(url) {
+            if (url.startsWith("http://")) {
+        url = url.replace("http://", "https://");
+          }
+
       const response = await fetch(url);
       const blob = await response.blob();
 
